[package]
name = "rust_rest"
version = "0.1.0"
authors = ["chrlen <christian.lengert@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
mysql = "*"


[[bin]]
name = "injector"
path = "src/injector/injector.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"