[package]
name = "tokio-docker"
version = "0.1.0"
authors = ["chrlen <christian.lengert@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
